{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 77,
  "lineage": "78ab0f9c-3d43-6a95-f3b3-fdc6ebff288e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b81861282d678342",
            "arn": "arn:aws:ec2:ap-south-1:891376926844:elastic-ip/eipalloc-0b81861282d678342",
            "association_id": "eipassoc-0822f22f42ebe2c2e",
            "domain": "vpc",
            "id": "eipalloc-0b81861282d678342",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0197ea88d1ab17ba2",
            "private_dns": "ip-10-0-1-13.ap-south-1.compute.internal",
            "private_ip": "10.0.1.13",
            "public_dns": "ec2-43-205-31-105.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.31.105",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "streamingapp-nat-eip"
            },
            "tags_all": {
              "Name": "streamingapp-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376926844:internet-gateway/igw-030e62fd10b9de4bf",
            "id": "igw-030e62fd10b9de4bf",
            "owner_id": "891376926844",
            "tags": {
              "Name": "streamingapp-igw"
            },
            "tags_all": {
              "Name": "streamingapp-igw"
            },
            "vpc_id": "vpc-00a90766f932f49f8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b81861282d678342",
            "association_id": "eipassoc-0822f22f42ebe2c2e",
            "connectivity_type": "public",
            "id": "nat-075c1a49250a9249b",
            "network_interface_id": "eni-0197ea88d1ab17ba2",
            "private_ip": "10.0.1.13",
            "public_ip": "43.205.31.105",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04b22c3ba128e5fce",
            "tags": {
              "Name": "streamingapp-nat-gw"
            },
            "tags_all": {
              "Name": "streamingapp-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376926844:route-table/rtb-0239872ab92c42b09",
            "id": "rtb-0239872ab92c42b09",
            "owner_id": "891376926844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-075c1a49250a9249b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "streamingapp-private-route-table"
            },
            "tags_all": {
              "Name": "streamingapp-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a90766f932f49f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376926844:route-table/rtb-023633cda38590a7a",
            "id": "rtb-023633cda38590a7a",
            "owner_id": "891376926844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-030e62fd10b9de4bf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "streamingapp-public-route-table"
            },
            "tags_all": {
              "Name": "streamingapp-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a90766f932f49f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c39b79610e81251c",
            "route_table_id": "rtb-0239872ab92c42b09",
            "subnet_id": "subnet-02ed9ad48bca18358"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0204d38223c432044",
            "route_table_id": "rtb-0239872ab92c42b09",
            "subnet_id": "subnet-03249fd469a73e31e"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6bb1c72b4ab272e",
            "route_table_id": "rtb-023633cda38590a7a",
            "subnet_id": "subnet-04b22c3ba128e5fce"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dac19e3ee89159ff",
            "route_table_id": "rtb-023633cda38590a7a",
            "subnet_id": "subnet-0c3aedc5d9e82bf71"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376926844:security-group/sg-04140a8d554b2ae87",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04140a8d554b2ae87",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3002
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "streamingapp-sg",
            "name_prefix": "",
            "owner_id": "891376926844",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "streamingapp-sg"
            },
            "tags_all": {
              "name": "streamingapp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a90766f932f49f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376926844:subnet/subnet-02ed9ad48bca18358",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ed9ad48bca18358",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376926844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "streamingapp-private_subnet-1"
            },
            "tags_all": {
              "Name": "streamingapp-private_subnet-1"
            },
            "vpc_id": "vpc-00a90766f932f49f8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376926844:subnet/subnet-03249fd469a73e31e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03249fd469a73e31e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376926844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "streamingapp-private_subnet-2"
            },
            "tags_all": {
              "Name": "streamingapp-private_subnet-2"
            },
            "vpc_id": "vpc-00a90766f932f49f8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376926844:subnet/subnet-04b22c3ba128e5fce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b22c3ba128e5fce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376926844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "streamingapp-public_subnet-1"
            },
            "tags_all": {
              "Name": "streamingapp-public_subnet-1"
            },
            "vpc_id": "vpc-00a90766f932f49f8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376926844:subnet/subnet-0c3aedc5d9e82bf71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3aedc5d9e82bf71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376926844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "streamingapp-public_subnet-2"
            },
            "tags_all": {
              "Name": "streamingapp-public_subnet-2"
            },
            "vpc_id": "vpc-00a90766f932f49f8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891376926844:vpc/vpc-00a90766f932f49f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-049179b67a4fb7df1",
            "default_route_table_id": "rtb-0fb2083fde87977bd",
            "default_security_group_id": "sg-0364d69a7a61ffdb1",
            "dhcp_options_id": "dopt-0bc789c75cbbd5a6a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00a90766f932f49f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb2083fde87977bd",
            "owner_id": "891376926844",
            "tags": {
              "Description": "streaming-app",
              "Name": "streamingapp-vpc"
            },
            "tags_all": {
              "Description": "streaming-app",
              "Name": "streamingapp-vpc"
            }
          }
        }
      ]
    }
  ]
}